--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <title>Weather-app</title>
     <link rel="stylesheet" href="css/styles.css">
-    <link rel="icon" href="/images/favicon.ico">
+    <!-- <link rel="icon" href="images/favicon.ico"> -->
     <script src="https://use.fontawesome.com/2b4011a06f.js"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
   </head>
